--- a/full-stack.html
+++ b/full-stack.html
@@ -62,7 +62,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/efront/1caf7064-9f66-4896-8db2-1ba301bb2cd3'>eFront - Full Stack Developer (eFront Insight)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/efront/1caf7064-9f66-4896-8db2-1ba301bb2cd3'>eFront - Full Stack Developer (eFront Insight)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -162,7 +162,7 @@ Rochester School is a private school focused on environmental sustainability and
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/align-tech/job/oB1yafw4'>Align Technology Careers - Jr. Full Stack Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/align-tech/job/oB1yafw4'>Align Technology Careers - Jr. Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Align Technology dev team is looking for a new junior Full-stack developer. 
 Specifically, we're looking for experienced developers to work on VERY 
@@ -173,7 +173,7 @@ interesting?...</p>
 <p>Jul 14, 2019 ... Senior Full Stack Developer. R&D / Engineering Raanana, Israel Job Number: 
 8347. Apply. Position at NICE. Responsibilities: Design and develop quality,?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/jadesoftware/job/oQLwafw1'>Jade Software Corporation Careers - Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/jadesoftware/job/oQLwafw1'>Jade Software Corporation Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... The Jade Software Corporation Digital Team has a position available for a Full-
 Stack Developer to join our digital delivery team as they build a solution for a?...</p>
@@ -187,7 +187,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ProximateTechnologiesInc1/743999692243109-java-full-stack-developer'>Proximate Technologies Inc. Java Full Stack Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ProximateTechnologiesInc1/743999692243109-java-full-stack-developer'>Proximate Technologies Inc. Java Full Stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -197,7 +197,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Vancouver Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4317023002'>Job Application for Full Stack Engineer  at Globality, Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4317023002'>Job Application for Full Stack Engineer  at Globality, Inc.</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -221,13 +221,13 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/automation-and-tooling-engineer-full-stack'>
+<h5><a href='https://definedcrowd.recruitee.com/o/automation-and-tooling-engineer-full-stack'>
       Automation and Tooling Engineer (Full Stack) - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://definedcrowd.recruitee.com/o/software-development-engineer-full-stack-lisboa-or-porto'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/software-development-engineer-full-stack-lisboa-or-porto'>
       Software Development Engineer (Full Stack) - Lisboa or Porto - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Lisbon Lisbon Lisbon, Portugal</span></p>
@@ -265,7 +265,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedge.recruiterbox.com/jobs/fk03fdf/'>
+<h5><a href='https://dedge.recruiterbox.com/jobs/fk03fdf/'>
     D?veloppeur Fullstack .NET/Javascript (H/F) at D-EDGE
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -415,7 +415,7 @@ hosting stack enables high quality experience to our creators and viewers.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://codete.workable.com/j/B5EBE4734A'>Codete - Jobs: FullStack Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://codete.workable.com/j/B5EBE4734A'>Codete - Jobs: FullStack Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Lesser Poland Voivodeship, Poland</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
